--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Wine', new_wine_path %>
+<%= link_to 'New Wine', new_wine_path %> <%= link_to 'Main Page', root_path %>
