beertype connects with beer

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :date, label: "Release Date" %>
-    <%= collection_check_boxes(:beer, :beertype_ids, @beertypes, :id, :name) %>
+    <%= collection_radio_buttons(:beer, :beertype_ids, @beertypes, :id, :name) %>
   </div>
 
   <div class="form-actions">
