--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -8,6 +8,7 @@
       <th>Name</th>
       <th>Date</th>
       <th>Beer Type</th>
+      <th>Colour</th>
       <th colspan="3"></th>
     </tr>
   </thead>
