finish the single selection relationshop with beers

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Brewery:</strong>
+  <%= @beer.brewery.map {|c| c.name}.join(', ') %>
+</p>
+
+<p>
   <strong>Beer Type:</strong>
   <%= @beer.beertype.map {|a| a.name}.join(', ')%>
 </p>
