--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :date, label: "Release Date" %>
+    <%= f.collection_radio_buttons(:brewery_ids, @breweries, :id, :name) %>
     <%= f.collection_radio_buttons(:beertype_ids, @beertypes, :id, :name) %>
     <%= f.collection_radio_buttons(:colour_ids, @colours, :id, :name) %>
   </div>
