--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Date</th>
+      <th>Brewery</th>
       <th>Beer Type</th>
       <th>Colour</th>
       <th colspan="3"></th>
@@ -18,6 +19,7 @@
       <tr>
         <td><%= beer.name %></td>
         <td><%= beer.date %></td>
+        <td><%= beer.brewery.map {|c| c.name }.join(',') %></td>
         <td><%= beer.beertype.map {|a| a.name}.join(', ') %></td>
         <td><%= beer.colour.map {|b| b.name}.join(', ') %></td>
         <td><%= link_to 'Show', beer %></td>
