--- a/app/views/wines/_form.html.erb
+++ b/app/views/wines/_form.html.erb
@@ -3,9 +3,12 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
+    <%= f.collection_radio_buttons(:winetype_ids, @winetypes, :id, :name) %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
+
+
 <% end %>
