--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Wine Type</th>
+      <th>Winery</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= wine.name %></td>
         <td><%= wine.winetype.map {|a| a.name}.join(', ') %></td>
+        <td><%= wine.winery.map {|b| b.name}.join(', ') %></td>
         <td><%= link_to 'Show', wine %></td>
         <td><%= link_to 'Edit', edit_wine_path(wine) %></td>
         <td><%= link_to 'Destroy', wine, method: :delete, data: { confirm: 'Are you sure?' } %></td>
