--- a/app/views/wines/_form.html.erb
+++ b/app/views/wines/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.collection_radio_buttons(:winetype_ids, @winetypes, :id, :name) %>
+    <%= f.collection_radio_buttons(:winery_ids, @wineries, :id, :name) %>
   </div>
 
   <div class="form-actions">
